--- a/src/root/stylesheet.css
+++ b/src/root/stylesheet.css
@@ -1,8 +1,8 @@
 :root {
+  /* branding color theme: https://design.sparebank1.no/profil/farger/ */
   --vann: #005AA4;
   --fjell: #002776;
   --frost: #7EB5D2;
-  --frost30: #D8E9F2;
   --sand: #F8E9DD;
   --syrin: #D3D3EA;
   --nordlys: #33AF85;
@@ -17,12 +17,6 @@
 
 header #header-container .portal-name {
     color: white;
-}
-
-.wave { 
-}
-.wave svg {
-  fill: var(--fjell)
 }
 
 /* Buttons */
@@ -60,6 +54,9 @@ header #header-container .portal-name {
 .ficon-notifications:hover {
   color: var(--fjell);
 }
+body[page='portal_home'] .user-notifications-menu #user-notification-icon i.ficon-notifications {
+  color: var(--vann);
+}
 
 /* Sidebar: aside */
 aside.suggested-articles {
@@ -74,35 +71,26 @@ aside.suggested-articles {
   border-radius: 1em;
 }
 
-/* menu bar */
-header nav#main-nav a.active img {
-	filter: brightness(0) invert(1);
-}
-
 /* Dropdown menu */
 header #request-dropdown a.incident {
- background-image: url(https://dev.azure.com/srbankfp/ee4c914d-195f-4f2a-9887-d1b07c5740f2/_apis/git/repositories/0d858fe4-d014-4bfc-a9f4-3556d973eeb9/items?path=/src/assets/Ikoner/edit%20note.png&versionDescriptor%5BversionOptions%5D=0&versionDescriptor%5BversionType%5D=0&versionDescriptor%5Bversion%5D=xillians/update-feedback&resolveLfs=true&%24format=octetStream&api-version=5.0);
+ background-image: url(https://raw.githubusercontent.com/veltorg/sb1fp-freshservice/496c59978b15648b23db257ff273cbace48d663c/src/assets/Ikoner/edit%20note.svg);
  background-size: 3.4em;
 }
 header #request-dropdown a.service-request {
-  background-image: url(https://dev.azure.com/srbankfp/ee4c914d-195f-4f2a-9887-d1b07c5740f2/_apis/git/repositories/0d858fe4-d014-4bfc-a9f4-3556d973eeb9/items?path=/src/assets/Ikoner/folder%20open%20%281%29.png&versionDescriptor%5BversionOptions%5D=0&versionDescriptor%5BversionType%5D=0&versionDescriptor%5Bversion%5D=xillians/update-feedback&resolveLfs=true&%24format=octetStream&api-version=5.0);
+ background-image: url(https://raw.githubusercontent.com/veltorg/sb1fp-freshservice/496c59978b15648b23db257ff273cbace48d663c/src/assets/Ikoner/folder%20open%20%281%29.svg);
  background-size: 3.2em;
 }
 header #request-dropdown a.employee-onboarding {
-  background-image: url(https://dev.azure.com/srbankfp/ee4c914d-195f-4f2a-9887-d1b07c5740f2/_apis/git/repositories/0d858fe4-d014-4bfc-a9f4-3556d973eeb9/items?path=/src/assets/Ikoner/person%20add%20%281%29.png&versionDescriptor%5BversionOptions%5D=0&versionDescriptor%5BversionType%5D=0&versionDescriptor%5Bversion%5D=xillians/update-feedback&resolveLfs=true&%24format=octetStream&api-version=5.0);
+  background-image: url(https://raw.githubusercontent.com/veltorg/sb1fp-freshservice/496c59978b15648b23db257ff273cbace48d663c/src/assets/Ikoner/person%20add%20%281%29.svg);
  background-size: 3.2em;
   
 }
 header #request-dropdown a.employee-offboarding {
-  background-image: url(https://dev.azure.com/srbankfp/ee4c914d-195f-4f2a-9887-d1b07c5740f2/_apis/git/repositories/0d858fe4-d014-4bfc-a9f4-3556d973eeb9/items?path=/src/assets/Ikoner/person%20minus%20bla.png&versionDescriptor%5BversionOptions%5D=0&versionDescriptor%5BversionType%5D=0&versionDescriptor%5Bversion%5D=xillians/update-feedback&resolveLfs=true&%24format=octetStream&api-version=5.0);
+  background-image: url(https://raw.githubusercontent.com/veltorg/sb1fp-freshservice/496c59978b15648b23db257ff273cbace48d663c/src/assets/Ikoner/person%20minus%20bla.svg);
  background-size: 3.2em;
 }
 
-/* Solutions page */
-#page-main .solutions-home-container{
-  border-radius: 1em;
-}
-.solutions-home-header {
-	background-color: var(--frost30);
-	border-radius: 1em 1em 0 0;
+/* Solutions */
+.solutions-browse-icon {
+  background-image: url(https://raw.githubusercontent.com/veltorg/sb1fp-freshservice/496c59978b15648b23db257ff273cbace48d663c/src/assets/Illustrasjoner/Lysp%C3%A6re%2003.svg);
 }
