--- a/src/root/stylesheet.css
+++ b/src/root/stylesheet.css
@@ -94,3 +94,11 @@ header #request-dropdown a.employee-offboarding {
 .solutions-browse-icon {
   background-image: url(https://raw.githubusercontent.com/veltorg/sb1fp-freshservice/496c59978b15648b23db257ff273cbace48d663c/src/assets/Illustrasjoner/Lysp%C3%A6re%2003.svg);
 }
+/* Service catalog */
+#catalog-list-page #catalog-list-header #catalog-list-header-items .catalog-image {
+  background-image: url(https://raw.githubusercontent.com/veltorg/sb1fp-freshservice/29c4b475aabf999409698fee1536638630c002d6/src/assets/Illustrasjoner/Merkevare%203%20lys%20bakgrunn.svg);
+  background-repeat: no-repeat;
+  width: 68px;
+  height: 43px;
+  margin-right: 0px;
+}
